Ada Perubahan pada Section 1. Penambahan tentang penjelasan dari Smart Lamp dengan Pir Motion Sensor

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
   <section>
     <h1>Smart Lamp With PIR Motion Sensor 2019</h1>
+    <p><b>&emsp;&emsp;&emsp;Passive Infra Red Sensor adalah sebuah sensor elektronik yang mengukur cahaya inframerah memancar dari benda-benda di lapangan pandang. Biasanya PIR digunakan untuk Beban lampu penerangan dalam suatu ruangan lazimnya dioperasikan secara manual oleh manusia. Dengan kemajuan teknologi saat ini, campur tangan manusia dalam operasional berusaha dikurangi. Saklar otomatis akan dapat memudahkan operasional. Efektif dan efisien untuk menghindari lampu yang menyala sia-sia tanpa ada aktifitas. Tujuannya tak lain untuk menghindari pekmborosan energi listrik.Penelitian ini mengambil topik tentang perancangan saklar otomatis untuk mengoperasikan beban lampu penerangan suatu ruangan. Saklar otomatis ini menggunakan masukan berupa sensor kehadiran orang jenis passive infrared (PIR) dan sensor intensitas cahaya jenis light dependent resistor (LDR). PIR termasuk sensor pyroelectric yang mempunyai respon sesaat ada perubahan panas. Sumber panas diradiasikan dengan infra merah.Tubuh manusia menghasilkan energi panas yang diradiasikan dengan infra merah. Radiasi panas tubuh manusia akan diterima sensor untuk respon masukan rangkaian. Rangkaian lengkap terdiri dari passive infrared sensor, lensa fresnel, rangkaian utama, power supply, LDR dan beban lampu penerangan. Pada intinya PIR dan LDR ini akan menjadi driver transistor. Transistor yang berfungsi sebagai saklar elektronik yang akan memutus dan menghubungkan beban lampu penerangan.</b></p>
   </section>
 
   <section>
@@ -44,7 +45,7 @@
   </section>
 
   <section>
-    <iframe width="640" height="360" src="https://www.youtube.com/embed/AV3kYPutYfs?rel=0&amp;showinfo=0&amp;controls=0&amp;enablejsapi=1&amp;loop=1&amp;playlist=AV3kYPutYfs" frameborder="0" allowfullscreen data-volume="0"></iframe>
+    <iframe width="700" height="400" src="https://www.youtube.com/watch?v=YVaOs1CpO7s&amp;rel=0&amp;showinfo=0&amp;controls=0&amp;enablejsapi=1&amp;loop=1&amp;playlist=YVaOs1CpO7s?re" frameborder="0" allowfullscreen data-volume="0"></iframe>
   </section>
 
   <section>
